# flask-peewee-marshmallow-demo

./: README.md  pyproject.toml
src/: app.py  model.py  run.py
src/model/: author.py  base_model.py  book.py  hobby.py  magazine.py  readable.py
src/templates/: index.html
